--- a/SeoulTrail/app/src/main/AndroidManifest.xml
+++ b/SeoulTrail/app/src/main/AndroidManifest.xml
@@ -5,14 +5,12 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
+    <!-- 카메라를 쓰기 위한 부분 -->
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.hardware.camera.autofocus" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
-    <!-- API21이상에서 사용 -->
-    <uses-feature android:name="android.hardware.camera2" />
-    <!-- API20이하에서 사용 -->
-    <uses-feature android:name="android.hardware.camera"
-                  android:required="false" />
 
 
     <application
@@ -44,7 +42,7 @@
             android:screenOrientation="portrait"/>
         <activity android:name="kr.go.seoul.seoultrail.Event"
             android:screenOrientation="portrait"/>
-        <activity android:name="kr.go.seoul.seoultrail.Camera"
+        <activity android:name="kr.go.seoul.seoultrail.CameraActivity"
             android:screenOrientation="portrait"/>
         <activity android:name="kr.go.seoul.seoultrail.GuideActivity"
             android:screenOrientation="portrait"/>
